manifest.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    enable-vts-status: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
  name: ${CI_ENVIRONMENT_SLUG}
spec:
  tls:
    - hosts:
        - ${CI_ENVIRONMENT_URL}
      secretName: letsencrypt-prod
  rules:
    - host: ${CI_ENVIRONMENT_URL}
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: media
                port:
                  number: 80
            path: /static/
            pathType: Prefix
          - backend:
              service:
                name: media
                port:
                  number: 80
            path: /media/
            pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: ${CI_PROJECT_NAME}
  ports:
    - port: 8000
      targetPort: 8000

---
kind: Service
apiVersion: v1
metadata:
  name: media
spec:
  selector:
    app: ${CI_PROJECT_NAME}
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: ${CI_PROJECT_NAME}-dep
  ports:
    - protocol: TCP
      port: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: ${CI_PROJECT_NAME}-dep
  ports:
    - protocol: TCP
      port: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CI_ENVIRONMENT_SLUG}
  annotations:
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_NAME}
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}
      annotations:
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    spec:
      restartPolicy: Always
      containers:
        - name: application
          image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/api/health/
              port: 8000
            failureThreshold: 30
          volumeMounts:
            - mountPath: /srv/static
              name: static-files
            - mountPath: /srv/media
              name: media-files
        - name: media
          image: docker.io/library/nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/static
              name: static-files
            - mountPath: /usr/share/nginx/html/media
              name: media-files
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: static-files
          emptyDir: {}
        - name: media-files
          persistentVolumeClaim:
            claimName: persistent-storage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependencies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_NAME}-dep
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}-dep
    spec:
      restartPolicy: Always
      containers:
        - name: redis
          image: redis:5.0
          ports:
            - containerPort: 6379
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
